# Python_Package-giphygiphy

./: .gitignore  Final Project.ipynb  README.md
.ipynb_checkpoints/: Final Project Proposal-checkpoint.ipynb  Untitled-checkpoint.ipynb
giphygiphy/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
giphygiphy/docs/: Makefile  conf.py  example.ipynb  make.bat
giphygiphy/src/giphygiphy/: __init__.py  giphygiphy.py
giphygiphy/tests/: test_giphygiphy.py
